src/org/dnltsk/mapfileplugin/Mapfile.bnf
{
    parserClass="org.dnltsk.mapfileplugin.parser.MapfileParser"

    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="Mapfile"
    psiImplClassSuffix="Impl"
    psiPackage="org.dnltsk.mapfileplugin.psi"
    psiImplPackage="org.dnltsk.mapfileplugin.psi.impl"

    elementTypeHolderClass="org.dnltsk.mapfileplugin.psi.MapfileTypes"
    elementTypeClass="org.dnltsk.mapfileplugin.psi.MapfileElementType"
    tokenTypeClass="org.dnltsk.mapfileplugin.psi.MapfileTokenType"

    psiImplUtilClass="org.dnltsk.mapfileplugin.psi.impl.MapfilePsiImplUtil"

  tokens=[
    SEMI=';'
    EQ='='
    LP='('
    RP=')'

    space='regexp:\s+'
    comment='regexp:#.*'
    number='regexp:[+-]{0,1}\d+(\.\d*)?'
    id='regexp:\p{Alpha}\w*'
    string="regexp:('([^'\\]|\\.)*'|\"([^\"\\]|\\.)*\")"

    op_1='+'
    op_2='-'
    op_3='*'
    op_4='/'
    op_5='!'
  ]
}

mapfile ::= (MapObject | LayerObject)

private MapObject ::= MAP MapAttributes END
private MapAttributes ::=
    (
        LayerObject

        NameAttr | TitleAttr

    ) MapAttributes *

private LayerObject ::= LAYER LayerAttributes END
private LayerAttributes ::=
    (
        ClassObject | ClusterObject | CompositeObject | FeatureObject | GridObject | JoinObject | MetadataObject
        | ProjectionObject | ValidationObject

        | ClassgroupAttr | ClassitemAttr | ConnectionAttr | ConnectiontypeAttr | DataAttr | DebugAttr | DumpAttr
        | EncodingAttr | ExtentAttr | FilterAttr | FooterAttr | FilteritemAttr | GeomtransformAttr | GroupAttr
        | HeaderAttr | LabelcacheAttr | LabelitemAttr | LabelmaxscaledenomAttr | LabelminscaledenomAttr
        | LabelrequiresAttr | MaskAttr | MaxfeaturesAttr | MaxgeowidthAttr | MaxscaledenomAttr | MingeowidthAttr
        | Minscaledenom | NameAttr | PluginAttr | PostlabelcacheAttr | ProcessingAttr | OffsiteAttr | SizeunitsAttr
        | RequiresAttr | StatusAttr | StyleitemAttr | SymbolscaledenomAttr | TemplateAttr | TileindexAttr
        | TileitemAttr | TilesrsAttr | TitleAttr | ToleranceunitsAttr | ToleranceAttr | TransformAttr | TypeAttr
        | UnitAttr | UtfdataAttr | UtfitemAttr

    ) LayerAttributes *

private ClassObject ::= CLASS END

private ClusterObject ::= CLUSTER END

private CompositeObject ::= COMPOSITE END

private FeatureObject ::= FEATURE END

private GridObject ::= GRID END

private JoinObject ::= JOIN END

private MetadataObject ::= METADATA END

private ProjectionObject ::= PROJECTION END

private ValidationObject ::= VALIDATION END

//
// ATTRIBUTES
//
private ClassgroupAttr ::= CLASSGROUP string
private ClassitemAttr ::= CLASSITEM string
private ConnectionAttr ::= CONNECTION string
private ConnectiontypeAttr ::= CONNECTIONTYPE connectionTypeValues
private DataAttr ::= DATA string
private DebugAttr ::= DEBUG debugValues
private DumpAttr ::= DUMP booleanValues
private EncodingAttr ::= ENCODING string
private ExtentAttr ::= EXTENT number number number number // double!
private FilterAttr ::= FILTER string // TODO: expression!
private GeomtransformAttr ::= GEOMTRANSFORM string // [<expression>|<Javascript file>]
private LabelcacheAttr ::= LABELCACHE onOffValues
private FilteritemAttr ::= FILTERITEM string
private FooterAttr ::= FOOTER string //filename
private GroupAttr ::= GROUP string
private HeaderAttr ::= HEADER string //filename
private LabelitemAttr ::= LABELITEM string
private LabelmaxscaledenomAttr ::= LABELMAXSCALEDENOM number // double
private LabelminscaledenomAttr ::= LABELMINSCALEDENOM number // double
private LabelrequiresAttr ::= LABELREQUIRES string // expression
private MaskAttr ::= MASK string // todo: layername validation
private MaxfeaturesAttr ::= MAXFEATURES number
private MaxgeowidthAttr ::= MAXGEOWIDTH number //double
private MaxscaledenomAttr ::= MAXSCALEDENOM number //double
private MingeowidthAttr ::= MINGEOWIDTH number //double
private Minscaledenom ::= MINSCALEDENOM number //double
private NameAttr ::= NAME string
private OffsiteAttr ::= OFFSITE ( string | (number number number) )
private PluginAttr ::= PLUGIN string // filename
private PostlabelcacheAttr ::= POSTLABELCACHE booleanValues
private ProcessingAttr ::= PROCESSING string
private RequiresAttr ::= REQUIRES string // expression
private SizeunitsAttr ::= SIZEUNITS sizeUnitValues
private StatusAttr ::= STATUS statusValues
private StyleitemAttr ::= STYLEITEM string // [<attribute>|auto|<javascript file>]
private SymbolscaledenomAttr ::= SYMBOLSCALEDENOM number // double
private TemplateAttr ::= TEMPLATE string // [file|url]
private TileindexAttr ::= TILEINDEX string // [filename|layername]
private TileitemAttr ::= TILEITEM string // [attribute]
private TilesrsAttr ::= TILESRS string // [attribute]
private TitleAttr ::= TITLE string
private ToleranceAttr ::= TOLERANCE number // double
private ToleranceunitsAttr ::= TOLERANCEUNITS toleranceUnitValues
private TransformAttr ::= TRANSFORM transformValues
private TypeAttr ::= TYPE typeValues
private UnitAttr ::= UNIT unitValues
private UtfdataAttr ::= UTFDATA string
private UtfitemAttr ::= UTFITEM string

//
// PRIMITIVE STUFF
//
private booleanValues ::= true|false
private debugValues ::= onOffValues|0|1|2|3|4|5
private connectionTypeValues ::= contour|kerneldensity|local|ogr|oraclespatial|plugin|postgis|sde|union|uvraster|wfs|wms
private onOffValues ::= on|off
private sizeUnitValues ::= feet|inches|kilometers|meters|miles|nauticalmiles|pixels
private statusValues ::= onOffValues|default
private toleranceUnitValues ::= sizeUnitValues|dd
private transformValues ::= booleanValues|ul|uc|ur|cl|cc|cr|ll|lc|lr
private typeValues ::= chart|circle|line|point|polygon|raster|query
private unitValues ::= toleranceUnitValues|percentages
